plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.8'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'jacoco'
	id 'org.asciidoctor.jvm.convert' version '3.3.2'
	id 'info.solidsoft.pitest' version '1.15.0'
}

// REST Docs 설정
ext {
	snippetsDir = file('build/generated-snippets')
}

group = 'com.final'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

// Java Record 역직렬화를 위한 컴파일러 옵션
tasks.withType(JavaCompile).configureEach {
	options.compilerArgs.add('-parameters')
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'

	// QueryDSL
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Database
	runtimeOnly 'com.mysql:mysql-connector-j'

	// Flyway (DB Migration)
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-mysql'

	// Spring Security
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	// AWS S3 (Spring Cloud AWS 3.x)
	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.1.1'

	// Google OAuth2
	implementation 'com.google.api-client:google-api-client:2.2.0'

	// Dotenv for environment variables
	implementation 'me.paulschwarz:spring-dotenv:4.0.0'

	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testRuntimeOnly 'com.h2database:h2'

	// Testcontainers
	testImplementation 'org.testcontainers:testcontainers:1.19.3'
	testImplementation 'org.testcontainers:junit-jupiter:1.19.3'
	testImplementation 'org.testcontainers:mysql:1.19.3'
	testImplementation 'org.testcontainers:toxiproxy:1.19.3'
	testImplementation 'com.redis:testcontainers-redis:2.2.2'

	// Embedded Redis (테스트용)
	testImplementation 'it.ozimov:embedded-redis:0.7.2'

	// PITest for mutation testing
	testImplementation 'org.pitest:pitest-junit5-plugin:1.2.1'

	// Redis 추가: 고송 토큰 저장소
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// Redisson - 분산 락
	implementation 'org.redisson:redisson-spring-boot-starter:3.25.0'

	// Resilience4j - Circuit Breaker, Retry, Rate Limiter
	implementation 'org.springframework.boot:spring-boot-starter-aop'
	implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
	implementation 'io.github.resilience4j:resilience4j-circuitbreaker:2.2.0'
	implementation 'io.github.resilience4j:resilience4j-retry:2.2.0'

	// Spring REST Docs
	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'

	// Swagger (springdoc-openapi)
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

	// EXIF Metadata Extraction
	implementation 'com.drewnoakes:metadata-extractor:2.19.0'

	// Image Processing (WebP Conversion)
	implementation 'com.sksamuel.scrimage:scrimage-core:4.1.3'
	implementation 'com.sksamuel.scrimage:scrimage-webp:4.1.3'

	// Jackson module for Java Records support
	implementation 'com.fasterxml.jackson.module:jackson-module-parameter-names'
}

tasks.named('test') {
	useJUnitPlatform()
	outputs.dir snippetsDir
	finalizedBy jacocoTestReport
}

// Asciidoctor 설정 (REST Docs 문서 생성)
tasks.named('asciidoctor') {
	inputs.dir snippetsDir
	dependsOn test
}

// 문서를 static 폴더로 복사
tasks.register('copyDocs', Copy) {
	dependsOn asciidoctor
	from "${asciidoctor.outputDir}"
	into 'src/main/resources/static/docs'
}

// JaCoCo 설정
jacoco {
	toolVersion = "0.8.11"
}

jacocoTestReport {
	dependsOn test
	reports {
		xml.required = true
		html.required = true
	}
}

jacocoTestCoverageVerification {
	violationRules {
		rule {
			limit {
				minimum = 0.0 // 커버리지 체크 비활성화
			}
		}
	}
}

// PITest (Mutation Testing) 설정 - 임시 비활성화
pitest {
	junit5PluginVersion = '1.2.1'
	targetClasses = ['com.example.demo.service.*']  // 핵심 서비스 로직만 타겟
	targetTests = ['com.example.demo.service.*Test']
	threads = 4
	outputFormats = ['HTML', 'XML']
	timestampedReports = false
	mutationThreshold = 0  // 임시 비활성화
	coverageThreshold = 0  // 임시 비활성화
}
